--- a/InterpretableAI.ipynb
+++ b/InterpretableAI.ipynb
@@ -44,7 +44,7 @@
     "# Imports\n",
     "\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
+    "# import tensorflow as tf\n",
     "from timeit import default_timer as timer\n",
     "from lime import lime_tabular\n",
     "from keras.models import load_model\n",
@@ -37580,7 +37580,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 ('tensorflow_env')",
    "language": "python",
    "name": "python3"
   },
@@ -37594,7 +37594,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a4ebfa0404ff61f1034486736056450788dc9c86eb215b5bed4826b7073c5e5c"
+   }
   }
  },
  "nbformat": 4,
